Move poll timeout reduction from FetchRequestManager to AsyncKafkaConsumer